[package]
name = "moji"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["multipart"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace", "limit", "fs", "timeout"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "mysql", "chrono", "uuid", "bigdecimal"] }
bigdecimal = "0.4.8"

# UUID and time utilities
uuid = { version = "1.16.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utility
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
